--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 -->
    <head>
       <style type="text/css">.ng-animate.item:not(.left):not(.right){-webkit-transition:0s ease-in-out left;transition:0s ease-in-out left}</style>
-      <style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
+      <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
       <title> </title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -467,7 +467,7 @@
                               <div class="item" role="page">
                                  <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="#" data-toggle="modal" data-target="#demo" target="">
                                  </a>
-                                 <a id="item_lvephpsel" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Select PHP Version</a>
+                                 <a id="item_lvephpsel" class="itemTextWrapper link"  href="phpselectversion.html" >Select PHP Version</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
@@ -492,7 +492,7 @@
                               <div class="item" role="page">
                                  <a id="icon-simple_zone_editor" class="itemImageWrapper integrations_icon spriteicon_img icon-simple_zone_editor" href="#" data-toggle="modal" data-target="#demo" target="">
                                  </a>
-                                 <a id="item_simple_zone_editor" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">CNAME Records</a>
+                                 <a id="item_simple_zone_editor" class="itemTextWrapper link"  href="cname.html" target="">CNAME Records</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
