--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-mysql_databases" class="itemImageWrapper integrations_icon spriteicon_img icon-mysql_databases" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-mysql_databases" class="itemImageWrapper integrations_icon spriteicon_img icon-mysql_databases" href="mysql.html" >
                                  </a>
-                                 <a id="item_mysql_databases" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">MySQL Databases</a>
+                                 <a id="item_mysql_databases" class="itemTextWrapper link"  href="mysql.html">MySQL Databases</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -465,7 +465,7 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="phpselectversion.html" >
                                  </a>
                                  <a id="item_lvephpsel" class="itemTextWrapper link"  href="phpselectversion.html" >Select PHP Version</a>
                               </div>
@@ -490,7 +490,7 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-simple_zone_editor" class="itemImageWrapper integrations_icon spriteicon_img icon-simple_zone_editor" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-simple_zone_editor" class="itemImageWrapper integrations_icon spriteicon_img icon-simple_zone_editor"  href="cname.html" >
                                  </a>
                                  <a id="item_simple_zone_editor" class="itemTextWrapper link"  href="cname.html" target="">CNAME Records</a>
                               </div>
