--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
                            <div id="files-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-file_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-file_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-file_manager" href="https://filemanager.ai/new/#/c/" >
                                  </a>
-                                 <a id="item_file_manager" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Online File Manager</a>
+                                 <a id="item_file_manager" class="itemTextWrapper link"  href="https://filemanager.ai/new/#/c/" >Online File Manager</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-directory_privacy" class="itemImageWrapper integrations_icon spriteicon_img icon-directory_privacy" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-directory_privacy" class="itemImageWrapper integrations_icon spriteicon_img icon-directory_privacy"href="protectedfolders.html" >
                                  </a>
-                                 <a id="item_directory_privacy" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Directory Privacy</a>
+                                 <a id="item_directory_privacy" class="itemTextWrapper link"  href="protectedfolders.html" >Directory Privacy</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -225,15 +225,15 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ftp_accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_accounts" href="/panel/indexpl.php?option=ftpsettings&amp;ttt=776627963145224192" target="">
+                                 <a id="icon-ftp_accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_accounts" href="ftpaccounts.html" target="">
                                  </a>
-                                 <a id="item_ftp_accounts" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">FTP Accounts</a>
+                                 <a id="item_ftp_accounts" class="itemTextWrapper link"  href="ftpaccounts.html" >FTP Accounts</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ftp_connections" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_connections" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-ftp_connections" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_connections" href="ftpsoftware.html" >
                                  </a>
-                                 <a id="item_ftp_connections" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Free FTP Software</a>
+                                 <a id="item_ftp_connections" class="itemTextWrapper link"  href="ftpsoftware.html" >Free FTP Software</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
