--- a/index.html
+++ b/index.html
@@ -225,19 +225,19 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ftp_accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_accounts" href="/panel/indexpl.php?option=ftpsettings&amp;ttt=776627963145224192" target="">
+                                 <a id="icon-ftp_accounts" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_accounts" href="#" data-toggle="modal" data-target="#demo">
                                  </a>
                                  <a id="item_ftp_accounts" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">FTP Accounts</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ftp_connections" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_connections" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-ftp_connections" class="itemImageWrapper integrations_icon spriteicon_img icon-ftp_connections" href="#" data-toggle="modal" data-target="#demo">
                                  </a>
-                                 <a id="item_ftp_connections" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Free FTP Software</a>
+                                 <a id="item_ftp_connections" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo">Free FTP Software</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-backup" class="itemImageWrapper integrations_icon spriteicon_img icon-backup" href="/panel/indexpl.php?option=backup&amp;ttt=776627963145224192" target="">
+                                 <a id="icon-backup" class="itemImageWrapper integrations_icon spriteicon_img icon-backup" href="#" data-toggle="modal" data-target="#demo">
                                  </a>
                                  <a id="item_backup" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Backups</a>
                               </div>
