--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                               <div class="item" role="page">
                                  <a id="icon-php" class="itemImageWrapper integrations_icon spriteicon_img icon-php" href="#" data-toggle="modal" data-target="#demo" target="">
                                  </a>
-                                 <a id="item_php" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">General PHP Info</a>
+                                 <a id="item_php" class="itemTextWrapper link"  href="phpinfo.html" >General PHP Info</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
