--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
          position: absolute;
       }
    </style>
-   <title>Phpinfo</title>
+   <title> </title>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width">
@@ -436,15 +436,12 @@
       <div id="content" class="container-fluid">
          <h1 class="page-header">
                      <span id="icon-ftp_connections" class="page-icon icon-ftp_connections"></span>
-                     <span id="pageHeading">General PHP Info</span>
+                     <span id="pageHeading">Title Here</span>
                      
                  </h1>
              
          <div class="body-content">
-         <center>
-         <iframe src="/modules/phpconfig/phpinfo.html" name="phpinfo" scrolling="yes" frameborder="no" align="left" height="800px" width="100%">
-         </iframe>
-         </center>
+            <!--Content Here-->
          </div>
       <!-- end sub -->
    </div>
