--- a/formatted.index.html
+++ b/formatted.index.html
@@ -370,7 +370,7 @@
                   <span class="cp-icon-bar"></span>
                   <span class="cp-icon-bar"></span>
                </button>
-               <a id="lnkHeaderHome" class="navbar-brand" target="_top" title="Home">
+               <a href="./" id="lnkHeaderHome" class="navbar-brand" target="_top" title="Home">
                   <img id="imgLogo" class="navbar-brand-logo" src="elements/vplogo.png" alt="">
                   <font style="vertical-align: sub;">
                   </font>
