--- a/ftpsoftware.html
+++ b/ftpsoftware.html
@@ -370,7 +370,7 @@
                   <span class="cp-icon-bar"></span>
                   <span class="cp-icon-bar"></span>
                </button>
-               <a id="lnkHeaderHome" class="navbar-brand" target="_top" title="Home">
+               <a href="./" id="lnkHeaderHome" class="navbar-brand" target="_top" title="Home">
                   <img id="imgLogo" class="navbar-brand-logo" src="elements/vplogo.png" alt="">
                   <font style="vertical-align: sub;">
                   </font>
@@ -421,8 +421,7 @@
          <!-- UI INCLUDES GLOBAL HEADER END-->
       </header>
       <aside id="sidebar" class="ng-scope">
-         <a id="lnkMenu" href="#" data-toggle="modal" data-target="#demo" title="" class="active" data-placement="right"
-            data-original-title="Home">
+         <a id="lnkMenu" href="./" title="" class="active" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
          <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-placement="right"
