Remove incorrect modal

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -421,7 +421,7 @@
          <!-- UI INCLUDES GLOBAL HEADER END-->
       </header>
       <aside id="sidebar" class="ng-scope">
-         <a id="lnkMenu" href="./" data-toggle="modal" data-target="#demo" title="" class="active" data-toggle="tooltip"
+         <a id="lnkMenu" href="./" title="" class="active" data-toggle="tooltip"
             data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
