🍪 Account Statistics URL for Home Page

--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
                            <div id="metrics-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-awstats" class="itemImageWrapper integrations_icon spriteicon_img icon-awstats" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-awstats" class="itemImageWrapper integrations_icon spriteicon_img icon-awstats" href="accountstatistics.html">
                                  </a>
-                                 <a id="item_awstats" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Account Statistics</a>
+                                 <a id="item_awstats" class="itemTextWrapper link"  href="accountstatistics.html">Account Statistics</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
