--- a/mysql.html
+++ b/mysql.html
@@ -469,7 +469,7 @@ Currently using <strong>0</strong> of <strong> -99999 </strong>  available datab
             </div>
 </div>
 
-  <form method="post" action="/panel/indexpl.php?option=mysql&amp;cmd=create" name="form1" id="mainform">
+ 
             <div class="form-group">
                 <label id="lblDbName" for="dbname">
                     New Database:
@@ -490,7 +490,7 @@ Currently using <strong>0</strong> of <strong> -99999 </strong>  available datab
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" id="submit_dbname" value="Create Database" class="btn btn-primary">
+                <button  data-toggle="modal" data-target="#demo" target="" id="submit_dbname" class="btn btn-primary">Create Database</button>
             </div>
         </form>
       
