--- a/cname.html
+++ b/cname.html
@@ -458,7 +458,7 @@
                         </th>
                      </tr>
                      <tr>
-                        <td style="width: 154px;" class="rightcolumn"><input value="SOURCE" onfocus="clearInput(this);"
+                        <td style="width: 154px;" class="rightcolumn"><input placeholder="SOURCE" onfocus="clearInput(this);"
                               onblur="restoreInput(this);" size="20" name="source"></td>
                         <td style="width: 204px;"><select name="d_name">
                               <option>wonderfulblog.com</option>
@@ -467,7 +467,7 @@
 
                         </td>
 
-                        <td style="width: 154px;" class="rightcolumn"><input value="DESTINATION"
+                        <td style="width: 154px;" class="rightcolumn"><input placeholder="DESTINATION"
                               onfocus="clearInput(this);" onblur="restoreInput(this);" size="20" name="destination">
                         </td>
                         <td style="width: 25px;text-align: right;"><a value="Add" href="#" data-toggle="modal" data-target="#demo" name="B1" class="btn btn-primary" type="submit">Add</a></td>
