--- a/ftpsoftware.html
+++ b/ftpsoftware.html
@@ -332,7 +332,7 @@
 
       /* Embedding: /usr/local/cpanel/base/frontend/paper_lantern/css/angular-chosen-spinner.min.css */
       .localytics-chosen.loading+.chosen-container-multi .chosen-choices {
-         background-image: url('images/spinner.gif');
+         background-image: url('elements/spinner.gif');
          background-repeat: no-repeat;
          background-position: 98%
       }
@@ -342,11 +342,11 @@
       }
 
       .localytics-chosen.loading+.chosen-container-single .chosen-single span {
-         background: url('images/spinner.gif') no-repeat right
+         background: url('elements/spinner.gif') no-repeat right
       }
 
       html[dir="rtl"] .localytics-chosen.loading+.chosen-container-single .chosen-single span {
-         background: url('images/spinner.gif') no-repeat left
+         background: url('elements/spinner.gif') no-repeat left
       }
 
       .localytics-chosen.loading+.chosen-container-single .chosen-single .search-choice-close {
@@ -460,11 +460,11 @@ Below are our recommended FTP clients:</p>
 <br>
 <a class="btn btn-primary" target="_blank" href="http://www.coreftp.com/download.html">Download CoreFTP&nbsp;for Windows</a><br>
 <br>
-<a class="btn btn-primary" target="_blank" href="http://filezilla-project.org/download.php">Download FileZilla for Windows</a>&nbsp;&nbsp;&nbsp;<img src="/images/label-recommended.png"><br><br>
+<a class="btn btn-primary" target="_blank" href="http://filezilla-project.org/download.php">Download FileZilla for Windows</a>&nbsp;&nbsp;&nbsp;<img src="/elements/label-recommended.png"><br><br>
 <a class="btn btn-primary" href="http://filezilla-project.org/download.php" target="_blank">
-Download FileZilla for Linux</a>&nbsp;&nbsp;&nbsp;<img src="/images/label-recommended.png"><br>
+Download FileZilla for Linux</a>&nbsp;&nbsp;&nbsp;<img src="/elements/label-recommended.png"><br>
 <br>
-<a class="btn btn-primary" href="http://filezilla-project.org/download.php" target="_blank">Download FileZilla for Mac OS X<br></a>&nbsp;&nbsp;&nbsp;<img src="/images/label-recommended.png"><br>
+<a class="btn btn-primary" href="http://filezilla-project.org/download.php" target="_blank">Download FileZilla for Mac OS X<br></a>&nbsp;&nbsp;&nbsp;<img src="/elements/label-recommended.png"><br>
 <br>
 <a class="btn btn-primary" href="http://cyberduck.ch/" target="_blank">Download Cyberduck for Mac OS X<br></a><br>
 <br>
