--- a/mysql.html
+++ b/mysql.html
@@ -332,7 +332,7 @@
 
       /* Embedding: /usr/local/cpanel/base/frontend/paper_lantern/css/angular-chosen-spinner.min.css */
       .localytics-chosen.loading+.chosen-container-multi .chosen-choices {
-         background-image: url('images/spinner.gif');
+         background-image: url('elements/spinner.gif');
          background-repeat: no-repeat;
          background-position: 98%
       }
@@ -342,11 +342,11 @@
       }
 
       .localytics-chosen.loading+.chosen-container-single .chosen-single span {
-         background: url('images/spinner.gif') no-repeat right
+         background: url('elements/spinner.gif') no-repeat right
       }
 
       html[dir="rtl"] .localytics-chosen.loading+.chosen-container-single .chosen-single span {
-         background: url('images/spinner.gif') no-repeat left
+         background: url('elements/spinner.gif') no-repeat left
       }
 
       .localytics-chosen.loading+.chosen-container-single .chosen-single .search-choice-close {
