--- a/modules/phpconfig/phpinfo.html
+++ b/modules/phpconfig/phpinfo.html
@@ -120,7 +120,7 @@
         <table>
             <tr>
                 <td class="e">System </td>
-                <td class="v">Michaelsoft Binbows NT 10.0 on freeweb5.binbows.com #1 SMP Wed May 2 07:43:19 EDT 2018 x86_64 </td>
+                <td class="v">Linux freeweb5.byetcluster.com 2.6.32-896.16.1.lve1.4.54.el6.x86_64 #1 SMP Wed May 2 07:43:19 EDT 2018 x86_64</td>
             </tr>
             <tr>
                 <td class="e">Server API </td>
@@ -128,7 +128,7 @@
             </tr>
             <tr>
                 <td class="e">Configuration File (php.ini) Path </td>
-                <td class="v">C:/Windows/System32/owo.ini </td>
+                <td class="v">php.ini </td>
             </tr>
             <tr>
                 <td class="e">Loaded Configuration File </td>
@@ -3615,16 +3615,6 @@
                 <td class="e">Ilia Alshanetsky, Joerg Behrens, Antony Dovgal, Stefan Esser, Moriyoshi Koizumi, Magnus Maatta, Sebastian Nohn, Derick Rethans, Melvyn Sopacua, Pierre-Alain Joye, Dmitry Stogov, Felipe Pena, David Soria Parra, Stanislav Malyshev, Julien Pauli, Stephen Zarkos, Anatol Belski, Remi Collet, Ferenc Kovacs </td>
             </tr>
         </table>
-        <table>
-            <tr class="h">
-                <th colspan="2">Websites and Infrastructure team</th>
-            </tr>
-            <tr>
-                <td class="e">Binbows Websites Team </td>
-                <td class="v" id="end">PHP 7.4 Running on Binbows NT 10.0 Server Edition </td>
-            </tr>
-         
-        </table>
         <h2>PHP License</h2>
         <table>
             <tr class="v">
@@ -3659,7 +3649,7 @@ for (let i in str) {
 console.log(result);
 if (result.PHPVersion) {
    document.getElementById("version").innerText = `PHP Version ${result.PHPVersion}`
-   document.getElementById("end").innerText = `PHP ${result.PHPVersion} Running on Binbows NT 10.0 Server Edition `
+   document.getElementById("end").innerText = `PHP ${result.PHPVersion} `
    document.title = `PHP ${result.PHPVersion} - phpinfo()`
 
 } else {
