--- a/modules/phpconfig/phpinfo.html
+++ b/modules/phpconfig/phpinfo.html
@@ -164,7 +164,7 @@
             </tr>
             <tr>
                 <td class="e">IPv6 Support </td>
-                <td class="v">no wifi LOL </td>
+                <td class="v">disabled</td>
             </tr>
             <tr>
                 <td class="e">DTrace Support </td>
