Update Account Statistics page
Updates the page header to include the stats icon and the heading "Resource Usage"

--- a/accountstatistics.html
+++ b/accountstatistics.html
@@ -435,8 +435,8 @@
       <!-- PAGE TEMPLATE'S CONTENT START -->
       <div id="content" class="container-fluid">
          <h1 class="page-header">
-                     <span id="icon-ftp_connections" class="page-icon icon-ftp_connections"></span>
-                     <span id="pageHeading">Title Here</span>
+                     <span id="icon-awstats" class="page-icon icon-awstats"></span>
+                     <span id="pageHeading">Resource Usage</span>
                      
                  </h1>
              
