--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
                            <div id="support-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-cloudflare_performance" class="itemImageWrapper integrations_icon spriteicon_img icon-cloudflare_performance" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-cloudflare_performance" class="itemImageWrapper integrations_icon spriteicon_img icon-cloudflare_performance" href="Tutorialdomain.html" target="">
                                  </a>
-                                 <a id="item_cloudflare_performance" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Domain Types</a>
+                                 <a id="item_cloudflare_performance" class="itemTextWrapper link" href="Tutorialdomain.html" target="">Domain Types</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
