--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-directory_privacy" class="itemImageWrapper integrations_icon spriteicon_img icon-directory_privacy"href="protectedfolders.html" >
+                                 <a id="icon-directory_privacy" class="itemImageWrapper integrations_icon spriteicon_img icon-directory_privacy" href="#" data-toggle="modal" data-target="#demo" target="">
                                  </a>
-                                 <a id="item_directory_privacy" class="itemTextWrapper link"  href="protectedfolders.html" >Directory Privacy</a>
+                                 <a id="item_directory_privacy" class="itemTextWrapper link" href="#" data-toggle="modal" data-target="#demo" target="">Directory Privacy</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
