Hide PHP Select Version
Seen as iFastNet has removed the selector because of the removal of PHP 5.x, this commit hides it from the index page.

--- a/index.html
+++ b/index.html
@@ -464,11 +464,13 @@
                                  <a id="item_multiphp_configuration" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Alter PHP Config</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
+                              <!-- Disabled.
                               <div class="item" role="page">
                                  <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="phpselectversion.html" >
                                  </a>
                                  <a id="item_lvephpsel" class="itemTextWrapper link"  href="phpselectversion.html" >Select PHP Version</a>
                               </div>
+                              -->
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
                         </div>
