--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                            <div id="databases-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-php_my_admin" class="itemImageWrapper integrations_icon spriteicon_img icon-php_my_admin" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-php_my_admin" class="itemImageWrapper integrations_icon spriteicon_img icon-php_my_admin" href="Pma.html">
                                  </a>
-                                 <a id="item_php_my_admin" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">phpMyAdmin</a>
+                                 <a id="item_php_my_admin" class="itemTextWrapper link"  href="Pma.html">phpMyAdmin</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
