Adds Disk Usage, updates MySQL
* This commit adds the page Disk Usage
* Because of the addition of PMA (7c42d60), MySQL is updated to show a DB (and remove a Rick-Roll)
* Updates README by adding "Disk Usage" as a feature
* Adds modules\stats2\disks.html (to indicate that Disk Usage is disabled in demo)

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-disk_usage" class="itemImageWrapper integrations_icon spriteicon_img icon-disk_usage" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-disk_usage" class="itemImageWrapper integrations_icon spriteicon_img icon-disk_usage" href="Diskspace.html">
                                  </a>
-                                 <a id="item_disk_usage" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Disk Usage</a>
+                                 <a id="item_disk_usage" class="itemTextWrapper link"  href="Diskspace.html">Disk Usage</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
