--- a/accountstatistics.html
+++ b/accountstatistics.html
@@ -1,7 +1,7 @@
 <html lang="english" dir="ltr" data-style="basic">
 <!--
       vPanel Demo
-      (c) 2022-Present Wybe Network, all rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
+      (c) 2022-Present Wybe Network, no rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
       This is a demo version of vPanel for MOFH-based providers.
       You are free to use this code with changes that will be explained later. 
       Providing/retaining credit to Wybe and SmallHost is recommended, but not required.
