Add "Addon Domains"

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="english" dir="ltr" data-style="basic">
 <!--
    vPanel Demo
-   (c) 2022-Present Wybe Network, all rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
+   (c) 2022-Present Wybe Network, no rights reserved. The idea and text is from SmallHost, at smallhost.us.to.
    This is a demo version of vPanel for MOFH-based providers.
    You are free to use this code with changes that will be explained later. 
    Providing/retaining credit to Wybe and SmallHost is recommended, but not required.
@@ -293,9 +293,9 @@
                            <div id="domains-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-addon_domains" class="itemImageWrapper integrations_icon spriteicon_img icon-addon_domains" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-addon_domains" class="itemImageWrapper integrations_icon spriteicon_img icon-addon_domains" href="addondomains.html">
                                  </a>
-                                 <a id="item_addon_domains" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Addon Domains</a>
+                                 <a id="item_addon_domains" class="itemTextWrapper link"  href="addondomains.html">Addon Domains</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
