--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-backup" class="itemImageWrapper integrations_icon spriteicon_img icon-backup" href="#" data-toggle="modal" data-target="#demo">
+                                 <a id="icon-backup" class="itemImageWrapper integrations_icon spriteicon_img icon-backup" href="backup.html">
                                  </a>
-                                 <a id="item_backup" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Backups</a>
+                                 <a id="item_backup" class="itemTextWrapper link"  href="backup.html">Backups</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
