Add Account Upgrades
This commit adds the Account Upgrades page and updates all the sidebars and mentions that were previously unavailable.

--- a/Pma.html
+++ b/Pma.html
@@ -423,7 +423,7 @@
          <a id="lnkMenu" href="./" title="" class="active" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
-         <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-placement="right"
+         <a id="26244546358179969" href="upgrade.html"
             data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
          </a>
@@ -453,7 +453,7 @@
 <br/><br/><br>Want faster MySQL? All premium accounts have faster mysql and upto 8000MB of mysql storage.<br>View the premium vPanel demo by <a class="btn btn-info" href="http://ifastnet.com/cpanelpreview2.php" target="_blank"> Clicking Here</a><br>
 <br>
 Free domains are included with most plans including .COM, .NET, .ORG and .INFO<br><br>
-<a class="transition" href="#" data-toggle="modal" data-target="#demo" target="">(Paid
+<a class="transition" href="upgrade.html">(Paid
 accounts have unlimited installs) Prices starting at only $3.99 per
 month</a>
 Find out more about Premium Hosting today!</a>
