--- a/ftpaccounts.html
+++ b/ftpaccounts.html
@@ -423,7 +423,7 @@
          <a id="lnkMenu" href="./" title="" class="active" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
-         <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-placement="right"
+         <a id="26244546358179969" href="upgrade.html"
             data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
          </a>
@@ -460,7 +460,7 @@ Use your FTP client to upload and download data to your hosting.  Your websites 
       </tbody></table>
 <br><br>
 Premium hosting allow you to create multiple FTP accounts with the ability to select an individual document root
- for each FTP user.<br>  To find out more and to order please <a href="https://ifastnet.com">click here</a>.
+ for each FTP user.<br>  To find out more and to order please <a href="upgrade.html">click here</a>.
 </div><div class="row"><div class="col-xs-12 col-md-12"></div></div>
    </div>
    
