--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a id="lnkMenu" href="./" title="" class="active" data-toggle="tooltip" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
             </a>
-            <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-toggle="tooltip" data-placement="right" data-original-title="Upgrade Plans">
+            <a id="26244546358179969" href="upgrade.html" data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
             </a>
             <br><br>
@@ -182,9 +182,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-two_factor_authentication" class="itemImageWrapper integrations_icon spriteicon_img icon-two_factor_authentication" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-two_factor_authentication" class="itemImageWrapper integrations_icon spriteicon_img icon-two_factor_authentication" href="upgrade.html">
                                  </a>
-                                 <a id="item_two_factor_authentication" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Account Upgrades</a>
+                                 <a id="item_two_factor_authentication" class="itemTextWrapper link"  href="upgrade.html">Account Upgrades</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
