--- a/mysql.html
+++ b/mysql.html
@@ -537,7 +537,7 @@ Premium hosting MySQL server benefits :<br>
 - Remote MySQL connections.<br>
 <br>
 Every paid hosting plan includes a free Top Level Domain name!<br>
-<a class="transition" href="#" data-toggle="modal" data-target="#demo">(Paid
+<a class="transition" href="upgrade.html">(Paid
 accounts have unlimited installs) Prices starting at only $3.99 per
 month</a>
 Find out more about Premium Hosting today!
