--- a/Tutorialdomain.html
+++ b/Tutorialdomain.html
@@ -416,7 +416,7 @@
         <a id="lnkMenu" href="./" title="Home" class="active" data-toggle="tooltip" data-placement="right">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
         </a>
-        <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-placement="right"
+        <a id="26244546358179969" href="upgrade.html"
         data-original-title="Upgrade Plans">
         <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
      </a>
