--- a/phpinfo.html
+++ b/phpinfo.html
@@ -425,7 +425,7 @@
             data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
          </a>
-         <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-toggle="tooltip"
+         <a id="26244546358179969" href="upgrade.html"
             data-placement="right" data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="elements/pl-sidebar-upgrade.png">
          </a>
