--- a/upgrade.html
+++ b/upgrade.html
@@ -382,7 +382,7 @@
                   <div class="btn-group">
                      <button id="btnUserPref" data-toggle="dropdown" class="btn dropdown-toggle user-preferences-btn">
                         <span id="userImg" class="glyphicon glyphicon-user"></span>
-                        <span id="lblUserNameTxt" class="hidden-inline-xs">Demo</span>
+                        <span id="lblUserNameTxt" class="hidden-inline-xs">YOURPREFIX_DEMO</span>
                         <span id="caretImg" class="caret"></span>
                      </button>
                      <ul class="dropdown-menu dropdown-menu-right">
