Add Account Settings

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                         <tr>
                            <td class="stats_left">Home Directory:<br><small><small>/home/DEMO/demo.domain/www/</small></small>
                               <br>
-                              <a class="btn btn-info" href="#" data-toggle="modal" data-target="#demo">More account settings</a>
+                              <a class="btn btn-info" href="accountsettings.html">More account settings</a>
                            </td>
                         </tr>
                      </tbody>
