--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-backup_wizard" class="itemImageWrapper integrations_icon spriteicon_img icon-backup_wizard" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-backup_wizard" class="itemImageWrapper integrations_icon spriteicon_img icon-backup_wizard" href="gettingstarted.html">
                                  </a>
-                                 <a id="item_backup_wizard" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Getting Started</a>
+                                 <a id="item_backup_wizard" class="itemTextWrapper link"  href="gettingstarted.html"">Getting Started</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
