Add Remote MySQL

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-remote_mysql" class="itemImageWrapper integrations_icon spriteicon_img icon-remote_mysql" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-remote_mysql" class="itemImageWrapper integrations_icon spriteicon_img icon-remote_mysql" href="remotemysql.html">
                                  </a>
-                                 <a id="item_remote_mysql" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Remote MySQL</a>
+                                 <a id="item_remote_mysql" class="itemTextWrapper link"  href="remotemysql.html">Remote MySQL</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
