--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-postgresql_databases" class="itemImageWrapper integrations_icon spriteicon_img icon-postgresql_databases" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-postgresql_databases" class="itemImageWrapper integrations_icon spriteicon_img icon-postgresql_databases" href="psql.html">
                                  </a>
-                                 <a id="item_postgresql_databases" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">PostgreSQL Databases</a>
+                                 <a id="item_postgresql_databases" class="itemTextWrapper link"  href="psql.html">PostgreSQL Databases</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
