Add Sub Domains page

--- a/accountsettings.html
+++ b/accountsettings.html
@@ -551,7 +551,7 @@
             <tr>
             <td>Sub domains<br>
             </td>
-            <td><a class="btn btn-primary" href="#" data-toggle="modal" data-target="#demo">View / Add Sub domains</a></td>
+            <td><a class="btn btn-primary" href="subdomains.html">View / Add Sub domains</a></td>
             </tr>
             <tr>
             <td>Addon domains</td>
