--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-subdomains" class="itemImageWrapper integrations_icon spriteicon_img icon-subdomains" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-subdomains" class="itemImageWrapper integrations_icon spriteicon_img icon-subdomains" href="subdomains.html">
                                  </a>
-                                 <a id="item_subdomains" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Sub Domains</a>
+                                 <a id="item_subdomains" class="itemTextWrapper link"  href="subdomains.html">Sub Domains</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -598,7 +598,7 @@
                         <tr class="row-odd">
                            <td class="stats_left">Sub-Domains:</td>
                            <td class="stats_right">
-                              0 / Unlimited
+                              1 / Unlimited
                               <div class="stats_progress_bar">
                                  <div class="cpanel_widget_progress_bar_percent" style="display:none">0</div>
                               </div>
