--- a/upgrade.html
+++ b/upgrade.html
@@ -516,6 +516,7 @@ upgrade all your domains and sub domains to our enhanced Premium Hosting
 	
 
 • <b>wonderfulblog.com</b><br>
+• <b>site.wonderfulblog.com</b><br>
 </div></div> 
  
  
