--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-user_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-user_manager" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-user_manager" class="itemImageWrapper integrations_icon spriteicon_img icon-user_manager" href="accountsettings.html">
                                  </a>
-                                 <a id="item_user_manager" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Account Settings</a>
+                                 <a id="item_user_manager" class="itemTextWrapper link"  href="accountsettings.html">Account Settings</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
