Add IP Blocker page

--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
                            <div id="security-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ip_blocker" class="itemImageWrapper integrations_icon spriteicon_img icon-ip_blocker" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-ip_blocker" class="itemImageWrapper integrations_icon spriteicon_img icon-ip_blocker" href="deny_ip.html">
                                  </a>
-                                 <a id="item_ip_blocker" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">IP Blocker</a>
+                                 <a id="item_ip_blocker" class="itemTextWrapper link"  href="deny_ip.html">IP Blocker</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
