Fix broken bullet image on Upgrade page

--- a/upgrade.html
+++ b/upgrade.html
@@ -867,7 +867,7 @@ Horde<br>
 <td style="font-family: Helvetica,Arial,sans-serif; text-align: center;"><img style="width: 18px; height: 19px;" alt="Feature Enable" src="elements/bullet1.png"></td>
 <td style="font-family: Helvetica,Arial,sans-serif; text-align: center;"><img style="width: 18px; height: 19px;" alt="Feature Enable" src="elements/bullet1.png"></td>
 <td style="font-family: Helvetica,Arial,sans-serif; text-align: center;"><img style="width: 18px; height: 19px;" alt="Feature Enable" src="elements/bullet1.png"></td>
-<td style="font-family: Helvetica,Arial,sans-serif; text-align: center;"><img style="width: 18px; height: 19px;" alt="Feature Enable" src="elementd/bullet1.png"></td>
+<td style="font-family: Helvetica,Arial,sans-serif; text-align: center;"><img style="width: 18px; height: 19px;" alt="Feature Enable" src="elements/bullet1.png"></td>
 </tr>
 <tr>
 <td style="vertical-align: top; font-family: Helvetica,Arial,sans-serif;">CGI-BIN<br>
